Corrected form element spacing in captions settings and reduced overlay to width of content only.

--- a/src/css/_private-variables.scss
+++ b/src/css/_private-variables.scss
@@ -15,7 +15,7 @@ $menu-background-color: #333 !default; // menus
 
 // Transparency
 $primary-background-transparency: 0.4 !default; // Used for progress holder
-$secondary-background-transparency: 0.4 !default; // Not used for VideoJS Neue theme
+$secondary-background-transparency: 0.4 !default; // Not used for AV Neue theme
 
 // Filters
 $filter-drop-shadow: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.6));
@@ -53,7 +53,7 @@ $text-time-shadow: (0 0 1px rgba(0,0,0,0.6));
 $text-time-width: 5em;
 
 // Modal and error
-$modal-padding: 4em;
+$modal-padding: 5em;
 $modal-text-size: 1.4em;
 $modal-text-line-height: 1.8;
 
