--- a/src/css/components/_error.scss
+++ b/src/css/components/_error.scss
@@ -1,6 +1,7 @@
 // main: ../video-js.scss
 
 .vjs-error .vjs-error-display .vjs-modal-dialog-content {
+  width: 100%;
   // see _modal-dialog.scss;
 }
 
