--- a/src/css/components/_modal-dialog.scss
+++ b/src/css/components/_modal-dialog.scss
@@ -7,16 +7,15 @@
 }
 
 .video-js .vjs-modal-dialog {
-  padding: $modal-padding;
-  // padding-right: 5.6em;
-  background-color: $primary-background-color;
   @include display-flex(flex-start, flex-start);
-  @extend %fill-parent;
-  // Not required for AV Neue theme
-  // @include linear-gradient(180deg, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0));
-
-  // This allows scrolling of content if need be.
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: $modal-padding;
   overflow: auto;
+  background-color: $primary-background-color;
 }
 
 // Reset box-sizing inside the modal dialog
